fix: process and services align center, changed size testimonials, paths to icons,

--- a/css/style.css
+++ b/css/style.css
@@ -532,11 +532,7 @@ main .main-illustration img {
   flex-wrap: wrap;
   gap: clamp(30px, 0.99vw + 1.609rem, 40px);
   margin-bottom: clamp(70px, 2.941vw + 3.585rem, 100px);
-}
-@media (max-width: 1024px) {
-  .services-block {
-    justify-content: center;
-  }
+  justify-content: center;
 }
 .services-block .service-block-card {
   display: flex;
@@ -795,11 +791,11 @@ article img {
   height: clamp(30px, 2.772vw + 1.13rem, 58px);
   margin: clamp(4px, 0.495vw + 0.117rem, 9.5px);
   border-radius: 30px;
-  background-image: url("../../icons/plus-icon.svg");
+  background-image: url(/home_work17/icons/plus-icon.svg);
   background-size: contain;
 }
 .process-block .process-block-card .accordion-button.active {
-  background-image: url("../../icons/minus-icon.svg");
+  background-image: url(/home_work17/icons/minus-icon.svg);
 }
 .process-block .process-block-card .accordion-description {
   display: none;
@@ -820,6 +816,7 @@ article img {
   flex-wrap: wrap;
   gap: 40px;
   justify-content: center;
+  max-width: 1659px;
 }
 .team-block .team-block-card {
   padding: 40px 35px;
@@ -916,7 +913,7 @@ article img {
 .testimonials-block .testimonials-block-list {
   display: flex;
   transition: transform 0.5s ease-in-out;
-  transform: translateX(110%);
+  transform: translateX(95%);
   justify-content: center;
   align-items: center;
 }
@@ -931,10 +928,10 @@ article img {
   }
 }
 .testimonials-block .testimonials-block-list .testimonials-block-card {
-  flex: 0 0 53%;
+  flex: 0 0 45%;
   box-sizing: border-box;
   width: clamp(330px, 27.327vw + 13.281rem, 606px);
-  margin: auto 30px;
+  margin: auto 34px;
 }
 @media (max-width: 768px) {
   .testimonials-block .testimonials-block-list .testimonials-block-card {
@@ -954,7 +951,7 @@ article img {
   border-radius: 45px;
   position: absolute;
   top: clamp(30px, 5.347vw + 0.438rem, 84px);
-  padding: clamp(30px, 2.178vw + 1.29rem, 52px);
+  padding: clamp(30px, 5.288vw - 1.51rem, 52px);
 }
 @media (max-width: 1024px) {
   .testimonials-block .testimonials-block-list .testimonials-block-card .bubble .testimonial {
@@ -976,7 +973,7 @@ article img {
 }
 .testimonials-block .testimonials-block-list .testimonials-block-card .bubble .testimonial-person {
   position: absolute;
-  top: clamp(390px, -0.693vw + 23.749rem, 370px);
+  top: clamp(400px, -0.693vw + 23.749rem, 370px);
   left: 80px;
 }
 .testimonials-block .testimonials-block-list .testimonials-block-card .bubble .testimonial-person .title {
@@ -1026,11 +1023,11 @@ article img {
   outline: none;
 }
 .testimonials-block .testimonials-block-navigation .radio-buttons input[type=radio]:checked {
-  content: url("../../icons/testimonials-radio-button-active.svg");
+  content: url(/home_work17/icons/testimonials-radio-button-active.svg);
 }
 .testimonials-block .testimonials-block-navigation .radio-buttons input[type=radio]:before {
   content: "";
-  background-image: url("../../icons/testimonials-radio-button.svg");
+  background-image: url(/home_work17/icons/testimonials-radio-button.svg);
   display: block;
   width: 14px;
   height: 14px;
