--- a/scss/components/_team-block.scss
+++ b/scss/components/_team-block.scss
@@ -5,6 +5,7 @@
   flex-wrap: wrap;
   gap: 40px;
   justify-content: center;
+  max-width: 1659px;
 
   & .team-block-card {
 
