--- a/scss/components/_testimonials-block.scss
+++ b/scss/components/_testimonials-block.scss
@@ -10,7 +10,8 @@
   & .testimonials-block-list {
     display: flex;
     transition: transform 0.5s ease-in-out;
-    transform: translateX(110%);
+    // transform: translateX(110%); //fix
+    transform: translateX(95%);
     justify-content: center;
     align-items: center;
     @media (max-width: 768px) {
@@ -22,10 +23,11 @@
     }
 
     & .testimonials-block-card {
-      flex: 0 0 53%;
+     // flex: 0 0 53%; //fix
+      flex: 0 0 45%;
       box-sizing: border-box;
       width: clamp(330px, 27.327vw + 13.281rem, 606px);
-      margin: auto 30px;
+      margin: auto 34px;
       @media (max-width: 768px) {
         flex: 0 0 95%;
       }
@@ -42,7 +44,7 @@
           border-radius: 45px;
           position: absolute;
           top: clamp(30px, 5.347vw + 0.438rem, 84px);
-          padding: clamp(30px, 2.178vw + 1.29rem, 52px);
+          padding: clamp(30px, 5.288vw - 1.51rem, 52px);
           @media (max-width: 1024px) {
             font-size: 1rem;
             line-height: 1.5rem;
@@ -64,7 +66,7 @@
 
         & .testimonial-person {
           position: absolute;
-          top: clamp(390px, -0.693vw + 23.749rem, 370px);
+          top: clamp(400px, -0.693vw + 23.749rem, 370px);
           left: 80px;
 
           & .title {
@@ -117,12 +119,12 @@
 
         &:checked {
           //background-image: url("../../icons/testimonials-radio-button-active.svg");
-          content: url("../../icons/testimonials-radio-button-active.svg");
+          content: url(/home_work17/icons/testimonials-radio-button-active.svg);
         }
 
         &:before {
           content: "";
-          background-image: url("../../icons/testimonials-radio-button.svg");
+          background-image: url(/home_work17/icons/testimonials-radio-button.svg);
           display: block;
           width: 14px;
           height: 14px;
